[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Assets/Images/Experimental/Red.png" type="Texture" id=1]
[ext_resource path="res://Game/Scripts/Main/MainMenuAndSubMenus/HowToPlay.gd" type="Script" id=2]

[node name="HowToPlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1028.0
margin_bottom = 606.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 898.0
margin_top = 315.0
margin_right = 984.0
margin_bottom = 368.0
text = "Next"

[node name="LastButton" type="Button" parent="."]
margin_left = 57.0
margin_top = 319.0
margin_right = 116.0
margin_bottom = 359.0
text = "Last"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpText" type="Label" parent="."]
margin_left = 116.0
margin_top = 32.0
margin_right = 913.0
margin_bottom = 133.0
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpImage" type="Sprite" parent="."]

[node name="Red" type="Sprite" parent="HelpImage"]
position = Vector2( 512.174, 345.409 )
scale = Vector2( 5.89394, 3.46942 )
texture = ExtResource( 1 )

[node name="BackButton" type="Button" parent="."]
margin_left = 446.755
margin_top = 541.143
margin_right = 564.755
margin_bottom = 573.143
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="LastButton" to="." method="_on_LastButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
